Fix background of link elements on IE10
Please see 37b483c1 in v2 for the original commit.

--- a/normalize.css
+++ b/normalize.css
@@ -97,6 +97,14 @@ body {
    ========================================================================== */
 
 /**
+ * Remove the gray background color from active links in IE 10.
+ */
+
+a {
+    background: transparent;
+}
+
+/**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
 
